deploy/prod/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blockscout
  namespace: crossbell
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: blockscout
      tier: api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: blockscout
        tier: api
      annotations:
        prometheus.io/port: "4000"
        prometheus.io/scrape: "true"
    spec:
      containers:
        - image: flosspicks/blockscout
          imagePullPolicy: Always
          name: blockscout
          command:
            - bin/blockscout
            - start
          ports:
            - containerPort: 4000
              protocol: TCP
          resources:
            requests:
              memory: "4Gi"
              cpu: "2"
            limits:
              memory: "8Gi"
              cpu: "4"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          readinessProbe:
            tcpSocket:
              port: 4000
            initialDelaySeconds: 20
            periodSeconds: 20
          livenessProbe:
            tcpSocket:
              port: 4000
            initialDelaySeconds: 20
            periodSeconds: 20
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
