deploy/prod/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: blockscout
  namespace: crossbell
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`scan.crossbell.io`) && PathPrefix(`/`)
    services:
    - name: blockscout-api
      port: 4000
